# MDA_ai

./: .gitignore  CUSTOM_SCRIPT_PACKAGE_MANIFEST.md  README.md  WINDOWS_BEGINNER_SETUP.md  WINDOWS_DA3_SETUP.md  WINDOWS_RECONSTRUCTION_GUIDE.md  add_ckpt_path.py  demo.py  pyproject.toml  requirements.txt  view.py
configs/: train.yaml
configs/callbacks/: default.yaml
configs/experiment/mda/: da3_mog_sky_full.yaml  da3_mog_sky_full_l1.yaml  vggt_mog_full.yaml
configs/hydra/launcher/: fair_a100.yaml
configs/logger/: wandb.yaml
configs/model/: da3.yaml  da3_depth.yaml
configs/trainer/: default.yaml
python_mda_customScript/: camera_parameters_json.py  run_mda_da3.py  run_mda_manual.md  run_mda_vggt.py  run_vggt.py  run_vggt_commercial.py  run_vggt_common.py  run_vggt_manual.md  test_camera_parameters_json.py
scripts/: export_commercial_vggt_custom_scripts.ps1  run_demo_da3.ps1  setup_windows_commercial_vggt.ps1  setup_windows_mda_da3.ps1  setup_windows_vggt.ps1
src/depth_anything_3/configs/: da3-giant-cam-mog-sky.yaml
src/depth_anything_3/model/: da3_cam_mog.py  dualdpt_mog_sky.py  mog_inference.py
src/depth_anything_3/model/dinov2/: vision_transformer.py
src/depth_anything_3/model/utils/: transform.py
src/depth_anything_3/utils/: geometry.py  utils_training.py
src/dust3r/: multiview_dust3r_datamodule.py
src/dust3r/datasets/: __init__.py
src/dust3r/datasets/base/: easy_dataset.py
src/dust3r/datasets/utils/: cropping.py  transforms.py
src/dust3r/datasets_cut3r/: __init__.py  ade20k_glass_dataset.py  dl3dv.py  dynamic_replica.py  hsod_glass.py  hypersim.py  layereddepth.py  omniworld_game.py  pointodyssey.py  project_aria_seq.py  spring.py  tartanair.py  trans10k_glass.py  unreal4k.py  vkitti2.py
src/dust3r/utils/: edge_aware_clipping.py  geometry.py  image.py
src/stream3r/: stream3r.py  stream3r_mog.py
src/testing/: run_demo.sh  run_inference_video.py
src/testing/utils/: model_choice.py  test_utils.py
src/training/: da3_wrapper.py  losses.py  multiview_dust3r_module_onlydepth.py  train.py  vggt_wrapper.py
src/training/utils/: __init__.py  dataloading_plugins.py  debug_vis_utils.py  gsplat_rendering_extrafeat.py  instantiators.py  logging_utils.py  lora_utils.py  loss_utils.py  rich_utils.py  torch_profile.py  utils.py
(+30 files in other folders)
